Bug 1221846 - Get Task Tracer building on desktop r=cyu.